[package]
name = "treasurehole"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["socks"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
bytebuffer = "0.2.1"
bytes = "*"
futures = "0.3"
regex = "1"
iui = { git = "https://github.com/rust-native-ui/libui-rs", branch = "trunk" }
chrono = "0.4"
